tests/integration/cfc/snapshots/tests__integration__cfc__resolver_tests__action_variables_annotated-4.snap
---
source: tests/integration/cfc/resolver_tests.rs
expression: annotations.get(left)
---
Some(
    Variable {
        resulting_type: "DINT",
        qualified_name: "main.b",
        constant: false,
        argument_type: ByVal(
            Local,
        ),
        is_auto_deref: false,
    },
)
