tests/integration/cfc/snapshots/tests__integration__cfc__resolver_tests__action_variables_annotated.snap
---
source: tests/integration/cfc/resolver_tests.rs
expression: annotations.get(act1)
---
Some(
    Program {
        qualified_name: "main.newAction",
    },
)
