tests/integration/cfc/snapshots/tests__integration__cfc__resolver_tests__jumps_annotated_with_label_annoations.snap
---
source: tests/integration/cfc/resolver_tests.rs
expression: annotations.get(&jump)
---
Some(
    Label {
        name: "lbl",
    },
)
